err/ethereum-augur-temp2.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/PyYAML-3.12.egg-info'...
Listing './lib/python3.5/site-packages/ethereum'...
Listing './lib/python3.5/site-packages/ethereum/experimental'...
Listing './lib/python3.5/site-packages/ethereum/pow'...
Compiling './lib/python3.5/site-packages/ethereum/snapshot.py'...
***   File "./lib/python3.5/site-packages/ethereum/snapshot.py", line 68
    print "[%d] created account snapshot %s" % (count, encode_hex(addr))
                                           ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/ethereum/tests'...
Listing './lib/python3.5/site-packages/ethereum/tools'...
Listing './lib/python3.5/site-packages/ethereum_augur_temp2-2.0.6.egg-info'...
Listing './lib/python3.5/site-packages/pbkdf2-1.3.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/py_ecc'...
Listing './lib/python3.5/site-packages/py_ecc/bn128'...
Listing './lib/python3.5/site-packages/py_ecc/optimized_bn128'...
Listing './lib/python3.5/site-packages/py_ecc/secp256k1'...
Listing './lib/python3.5/site-packages/py_ecc-1.4.2.dist-info'...
Listing './lib/python3.5/site-packages/pyethash-0.1.27.egg-info'...
Listing './lib/python3.5/site-packages/pysha3-1.0.2.dist-info'...
Listing './lib/python3.5/site-packages/repoze'...
Listing './lib/python3.5/site-packages/repoze/lru'...
Listing './lib/python3.5/site-packages/repoze.lru-0.7.dist-info'...
Listing './lib/python3.5/site-packages/rlp'...
Listing './lib/python3.5/site-packages/rlp/sedes'...
Listing './lib/python3.5/site-packages/rlp-0.6.0.egg-info'...
Listing './lib/python3.5/site-packages/scrypt-0.8.0.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/tools'...
Listing './lib/python3.5/site-packages/yaml'...
Listing './share'...
Listing './share/python-wheels'...
